@@ -1,3 +1,4 @@
+* FEA#9189 Possibilité de mélanger des lignes positives et négatives lors de la création d'un paiement (dont le montant sera égal à la différence)
 * BUG#8837 Correctif du crash lors de la lecture de la quittance liée au paiement si le champ quittance sur la ligne est vide.
 * BUG#8417 Modifier la valeur de la date de paiement uniquement lorsqu'on reçoit un rejet de payment de type SEPA
 
