@@ -1,3 +1,4 @@
+* FEA#9189 Allow to mix positive and negative move lines when creating payments
 * BUG#8837 Fix crash when reading the related invoice on payment if the invoice field is empty on the move line.
 * BUG#8417 Set the payment date to none only when receiving SEPA payment fail
 
